WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222061
[PlayStation] Fix build break after
r272948
https://bugs.webkit.org/show_bug.cgi?id=222061
Summary
[PlayStation] Fix build break after r272948
Stephan Szabo
Reported
2021-02-17 12:37:54 PST
Like windows with clang-cl, playstation has issues with certain cases of destructuring.
Attachments
Patch
(1.45 KB, patch)
2021-02-17 12:41 PST
,
Stephan Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephan Szabo
Comment 1
2021-02-17 12:41:01 PST
Created
attachment 420695
[details]
Patch
Fujii Hironori
Comment 2
2021-02-17 13:12:07 PST
(In reply to Stephan Szabo from
comment #0
)
> Like windows with clang-cl, playstation has issues with certain cases of > destructuring.
clang-cl no longer have this issue.
https://bugs.llvm.org/show_bug.cgi?id=33236
https://reviews.llvm.org/D66040
EWS
Comment 3
2021-02-17 15:31:04 PST
Committed
r273037
: <
https://commits.webkit.org/r273037
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420695
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-02-17 15:32:52 PST
<
rdar://problem/74452928
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug