[PlayStation] Fix build break after r272948 https://bugs.webkit.org/show_bug.cgi?id=222061

Reviewed by Don Olmstead.

* inspector/InspectorOverlay.cpp:


Canonical link: https://commits.webkit.org/234238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273037 268f45cc-cd09-0410-ab3c-d52691b4dbfc